# dtkcommon

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  README.zh_CN.md  dtkcommon.pro  linglong.yaml  main.cpp  write_dtkcommon_module.sh
.reuse/: dep5
archlinux/: PKGBUILD
cmake/: DtkBuildHelper.cmake
cmake/Dtk/: DtkConfig.cmake  DtkInstallDConfigConfig.cmake
configs/: org.deepin.dtk.preference.json
debian/: changelog  control  copyright  files  libdtkcommon-dev.install  libdtkcommon.install  rules
debian/libdtkcommon/DEBIAN/: conffiles  control  md5sums
features/: dtk_build.prf  dtk_build_config.prf  dtk_install_dconfig.prf  dtk_install_multiversion.prf  dtk_module.prf  dtk_multiversion.prf  dtk_qmake.prf  dtk_translation.prf
misc/: config.cmake.in  qt_lib_dtkcommon.pri.in
rpm/: dtkcommon.spec
schemas/: com.deepin.dtk.gschema.xml  org.deepin.dtkcore.dconfig.json  org.deepin.dtkcore.json  org.deepin.dtkgui.dark.dpalette.json  org.deepin.dtkgui.dark.qpalette.json  org.deepin.dtkgui.light.dpalette.json  org.deepin.dtkgui.light.qpalette.json
